# Notepad_QtCLion

./: .gitignore  CMakeLists.txt  README.md
employee/: EmpModel.cpp  EmpModel.h  README.md  addemp.cpp  addemp.h  addemp.ui  mainpage.cpp  mainpage.h  mainpage.ui  queryemp.cpp  queryemp.h  queryemp.ui  ui_queryemp.h
include/: mynotepad.h  notepad.h
libbass/: main.c
libmsc/: main.c  main_without_file.c  msp_errors.h  msp_types.h
libmsc/jets/msc/res/tts/: xiaoyan.jet
libmsc/msc/res/tts/: xiaofeng.jet
ref/: wav_header.h
ref/wave/: WaveTest.cpp  rifffile.h
resources/: api.json  conf.json  mynotepad.qrc  notepad.qrc  release.rc  res.qrc
src/: AppConfig.h  InitThread.cpp  InitThread.h  Logger.cpp  Logger.h  Model.cpp  Model.h  MyEventWidget.cpp  MyEventWidget.h  PlayAudio.h  ProgressDialog.cpp  ProgressDialog.h  Task.cpp  Task.h  calculator.cpp  calculator.h  calculator.ui  console.cpp  console.h  main.cpp  maindialog.cpp  maindialog.h  maindialog.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  mynotepad.cpp  mynotepad.ui  notepad.cpp  notepad.h  notepad.ui  settingsdialog.cpp  settingsdialog.h  settingsdialog.ui  thread.h  ui_calculator.h  ui_mainwindow.h  ui_mynotepad.h  ui_notepad.h  ui_settingsdialog.h
